[gd_scene load_steps=14 format=2]

[ext_resource path="res://menus/pause/scripts/pause.gd" type="Script" id=1]
[ext_resource path="res://menus/pause/state_scripts/idle.gd" type="Script" id=2]
[ext_resource path="res://menus/pause/state_scripts/process.gd" type="Script" id=3]
[ext_resource path="res://menus/pause/state_scripts/paused.gd" type="Script" id=4]
[ext_resource path="res://menus/pause/state_scripts/exit.gd" type="Script" id=5]
[ext_resource path="res://menus/common/animations/SETUP.tres" type="Animation" id=6]
[ext_resource path="res://menus/common/animations/slide-in.tres" type="Animation" id=7]
[ext_resource path="res://menus/common/animations/slide-out.tres" type="Animation" id=8]
[ext_resource path="res://menus/common/themes/menu-primary.tres" type="Theme" id=9]
[ext_resource path="res://menus/common/spritesheets/kenney_nl/greySheet.png" type="Texture" id=10]
[ext_resource path="res://menus/victory/scripts/menu-buttons.gd" type="Script" id=11]
[ext_resource path="res://menus/common/prefabs/general_menu_button/scenes/GeneralMenuButton.tscn" type="PackedScene" id=12]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 191, 100, 99, 98 )

[node name="Pause" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -720.0
margin_bottom = -720.0
script = ExtResource( 1 )

[node name="States" type="Node" parent="."]

[node name="Idle" type="Node" parent="States"]
script = ExtResource( 2 )

[node name="Process" type="Node" parent="States"]
script = ExtResource( 3 )

[node name="Paused" type="Node" parent="States"]
script = ExtResource( 4 )

[node name="Exit" type="Node" parent="States"]
script = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/SETUP = ExtResource( 6 )
anims/slide-in = ExtResource( 7 )
anims/slide-out = ExtResource( 8 )

[node name="BackPanel" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -350.0
margin_top = -250.0
margin_right = 350.0
margin_bottom = 250.0
rect_min_size = Vector2( 700, 500 )
theme = ExtResource( 9 )
texture = SubResource( 1 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10

[node name="Label" type="Label" parent="BackPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 27.0103
margin_bottom = -318.99
size_flags_horizontal = 3
text = "Paused"
align = 1

[node name="MenuButtons" type="VBoxContainer" parent="BackPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 105.168
margin_bottom = -36.8322
alignment = 1
script = ExtResource( 11 )

[node name="Resume" parent="BackPanel/MenuButtons" instance=ExtResource( 12 )]
margin_left = 200.0
margin_top = 46.0
margin_right = 500.0
margin_bottom = 96.0
rect_min_size = Vector2( 300, 50 )
rect_pivot_offset = Vector2( 0, 0 )
size_flags_horizontal = 4
text = "Resume"

[node name="ResetPongBall" parent="BackPanel/MenuButtons" instance=ExtResource( 12 )]
margin_left = 200.0
margin_top = 100.0
margin_right = 500.0
margin_bottom = 150.0
rect_min_size = Vector2( 300, 50 )
rect_pivot_offset = Vector2( 0, 0 )
size_flags_horizontal = 4
text = "Reset Pong Ball"

[node name="Settings" parent="BackPanel/MenuButtons" instance=ExtResource( 12 )]
margin_left = 200.0
margin_top = 154.0
margin_right = 500.0
margin_bottom = 204.0
rect_min_size = Vector2( 300, 50 )
rect_pivot_offset = Vector2( 0, 0 )
size_flags_horizontal = 4
text = "Settings"

[node name="MainMenu" parent="BackPanel/MenuButtons" instance=ExtResource( 12 )]
margin_left = 200.0
margin_top = 208.0
margin_right = 500.0
margin_bottom = 258.0
rect_min_size = Vector2( 300, 50 )
rect_pivot_offset = Vector2( 0, 0 )
size_flags_horizontal = 4
text = "Main Menu"

[node name="ExitGame" parent="BackPanel/MenuButtons" instance=ExtResource( 12 )]
margin_left = 200.0
margin_top = 262.0
margin_right = 500.0
margin_bottom = 312.0
rect_min_size = Vector2( 300, 50 )
rect_pivot_offset = Vector2( 0, 0 )
size_flags_horizontal = 4
text = "Exit Game"

[connection signal="pressed" from="BackPanel/MenuButtons/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="BackPanel/MenuButtons/ResetPongBall" to="." method="_on_ResetPongBall_pressed"]
[connection signal="pressed" from="BackPanel/MenuButtons/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="BackPanel/MenuButtons/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="BackPanel/MenuButtons/ExitGame" to="." method="_on_ExitGame_pressed"]
